<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/BatteryLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/battery_level" />

    <TextView
        android:id="@+id/QuaternionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BatteryLevelLabel"
        android:layout_below="@+id/BatteryLevelLabel"
        android:text="@string/quaternion" />

    <TextView
        android:id="@+id/GyroscopeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/QuaternionLabel"
        android:layout_below="@+id/QuaternionLabel"
        android:text="@string/gyroscope" />

    <TextView
        android:id="@+id/Quaternion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/QuaternionLabel"
        android:layout_alignBottom="@+id/QuaternionLabel"
        android:layout_alignLeft="@+id/BatteryLevel"
        android:text="0, 0, 0, 0" />

    <TextView
        android:id="@+id/Gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/GyroscopeLabel"
        android:layout_alignBottom="@+id/GyroscopeLabel"
        android:layout_alignLeft="@+id/Quaternion"
        android:text="0, 0, 0" />

    <TextView
        android:id="@+id/AccelerometerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GyroscopeLabel"
        android:layout_below="@+id/GyroscopeLabel"
        android:text="@string/accelerometer" />

    <TextView
        android:id="@+id/Accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/AccelerometerLabel"
        android:layout_alignBottom="@+id/AccelerometerLabel"
        android:layout_alignLeft="@+id/Gyroscope"
        android:text="0, 0, 0" />

    <TextView
        android:id="@+id/MagnetometerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccelerometerLabel"
        android:layout_below="@+id/AccelerometerLabel"
        android:text="@string/magnetometer" />

    <TextView
        android:id="@+id/Magnetometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/MagnetometerLabel"
        android:layout_alignBottom="@+id/MagnetometerLabel"
        android:layout_alignLeft="@+id/Accelerometer"
        android:text="0, 0, 0" />

    <TextView
        android:id="@+id/BatteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BatteryLevelLabel"
        android:layout_alignBottom="@+id/BatteryLevelLabel"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/MagnetometerLabel"
        android:text="0" />

</RelativeLayout>